@@ -1,5 +1,5 @@
 /* Hey EMACS -*- linux-c -*- */
-/* $Id: comm.c 710 2004-05-14 14:37:42Z roms $ */
+/* $Id$ */
 
 /*  tilp - Ti Linking Program
  *  Copyright (C) 1999-2004  Romain Lievin
@@ -78,7 +78,47 @@ gint display_comm_dbox()
 		gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(button),
 					     FALSE);
 
-	// Port (before cable to force update)
+	// Cable  
+	data = glade_xml_get_widget(xml, "optionmenu_comm_cable");
+	switch (link_cable.link_type) {
+	case LINK_TGL:
+		gtk_option_menu_set_history(GTK_OPTION_MENU(data), 0);
+		break;
+		
+	case LINK_SER:
+		gtk_option_menu_set_history(GTK_OPTION_MENU(data), 1);
+		break;
+
+	case LINK_SLV:
+	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 2);
+	  break;
+
+	case LINK_PAR:
+	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 3);
+	  break;
+
+	case LINK_VTI:
+	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 4);
+	  break;
+
+    case LINK_TIE:
+	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 5);
+	  break;
+	
+	case LINK_VTL:
+	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 6);
+	  break;
+
+    case LINK_NUL:
+      gtk_option_menu_set_history(GTK_OPTION_MENU(data), 7);
+	  break;
+
+	default:
+	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 7);
+	  break;
+	}
+
+	// Port
 	port = data = glade_xml_get_widget(xml, "optionmenu_comm_port");
 	switch (link_cable.port) {
 	case PARALLEL_PORT_1:
@@ -119,48 +159,18 @@ gint display_comm_dbox()
 	  break;
 	}
 
-	// Cable  
-	data = glade_xml_get_widget(xml, "optionmenu_comm_cable");
-	switch (link_cable.link_type) {
-	case LINK_TGL:
-		gtk_option_menu_set_history(GTK_OPTION_MENU(data), 0);
-		break;
-		
-	case LINK_SER:
-		gtk_option_menu_set_history(GTK_OPTION_MENU(data), 1);
-		break;
-
-	case LINK_SLV:
-	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 2);
-	  break;
-
-	case LINK_PAR:
-	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 3);
-	  break;
-
-	case LINK_TIE:
-	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 4);
-	  break;
-
-	case LINK_VTI:
-	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 5);
-	  break;
-	
-	case LINK_VTL:
-	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 6);
-	  break;
-
-    case LINK_NUL:
-      gtk_option_menu_set_history(GTK_OPTION_MENU(data), 7);
-	  break;
-
-	default:
-	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 7);
-	  break;
-	}
-
 	// Calc
 	data = glade_xml_get_widget(xml, "optionmenu_comm_calc");
+
+	switch(tihw.calc_type) 
+	{
+    case TI92:  link_cable.calc_type = CALC_TI92;  break;
+    case TI89:  link_cable.calc_type = CALC_TI89;  break;
+    case TI92p: link_cable.calc_type = CALC_TI92P; break;
+	case V200:	link_cable.calc_type = CALC_V200;  break;
+    default: break;
+    }
+
 	switch (link_cable.calc_type) {
 	case CALC_TI73:
 	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 0);
@@ -177,33 +187,37 @@ gint display_comm_dbox()
 	case CALC_TI83P:
 	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 3);
 	  break;
-	  
-	case CALC_TI85:
+
+	case CALC_TI84P:
 	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 4);
 	  break;
 	  
-	case CALC_TI86:
+	case CALC_TI85:
 	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 5);
 	  break;
 	  
-	case CALC_TI89:
+	case CALC_TI86:
 	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 6);
 	  break;
 	  
-	case CALC_TI92:
+	case CALC_TI89:
 	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 7);
 	  break;
-	  
-	case CALC_TI92P:
+
+	case CALC_TI89T:
 	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 8);
 	  break;
 	  
-	case CALC_V200:
+	case CALC_TI92:
 	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 9);
 	  break;
-	
-	default:
+	  
+	case CALC_TI92P:
 	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 10);
+	  break;
+	  
+	case CALC_V200:
+	  gtk_option_menu_set_history(GTK_OPTION_MENU(data), 11);
 	  break;
 	}
 
@@ -395,31 +409,41 @@ comm_calc_changed                      (GtkOptionMenu   *optionmenu,
   	break;
 
 	case 4:
+    		tmp_lp.calc_type = CALC_TI84P;
+    		gtk_widget_set_sensitive(button, TRUE);
+  	break;
+
+	case 5:
     		tmp_lp.calc_type = CALC_TI85;
     		gtk_widget_set_sensitive(button, FALSE);
   	break;
 
-	case 5:
+	case 6:
     		tmp_lp.calc_type = CALC_TI86;
     		gtk_widget_set_sensitive(button, FALSE);
   	break;
 
-	case 6:
+	case 7:
     		tmp_lp.calc_type = CALC_TI89;
     		gtk_widget_set_sensitive(button, TRUE);
   	break;
 
-	case 7:
-    		tmp_lp.calc_type = CALC_TI92;
-    		gtk_widget_set_sensitive(button, FALSE);
-  	break;
-
 	case 8:
-    		tmp_lp.calc_type = CALC_TI92P;
+    		tmp_lp.calc_type = CALC_TI89T;
     		gtk_widget_set_sensitive(button, TRUE);
   	break;
 
 	case 9:
+    		tmp_lp.calc_type = CALC_TI92;
+    		gtk_widget_set_sensitive(button, FALSE);
+  	break;
+
+	case 10:
+    		tmp_lp.calc_type = CALC_TI92P;
+    		gtk_widget_set_sensitive(button, TRUE);
+  	break;
+
+	case 11:
     		tmp_lp.calc_type = CALC_V200;
     		gtk_widget_set_sensitive(button, TRUE);
 	break;
