@@ -5,6 +5,11 @@ To do:
 	- link port is broken (HW2 only ?!)
 	- stealth I/O and mem protect (done but not enabled)
 
+- 07/02/2005, version 1.80m: roms
+	- fixed and tested linkport support with real cables: GrayLink, BlackLink.
+	SilverLink makes TiEmu crash.
+	Virtual links don't work !
+
 - 21/01/2005, version 1.80l: roms
 	- switched to GTK+ package 2.4-rc26 (2.4.14): compatible with GiMP and fixes toolbar tooltips
 	- fixed size of handles in handle wnd
